bring up to JDK 18